// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout large should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout large should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    testid="123"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout large should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout large should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--sm bpk-price__descriptionSpacing"
      >
        / night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout large should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <span
      class="bpk-text bpk-text--sm bpk-price__subtitle"
    >
      £200
    </span>
    <div>
      <span
        class="bpk-text bpk-text--xxl"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout small should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--small"
  >
    <span
      class="bpk-text bpk-text--heading-4"
    >
      £1,830
    </span>
  </div>
</DocumentFragment>
`;

exports[`Layout small should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--small"
    testid="123"
  >
    <span
      class="bpk-text bpk-text--heading-4"
    >
      £1,830
    </span>
  </div>
</DocumentFragment>
`;

exports[`Layout small should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--small custom-classname"
  >
    <span
      class="bpk-text bpk-text--heading-4"
    >
      £1,830
    </span>
  </div>
</DocumentFragment>
`;

exports[`Layout small should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--small"
  >
    <span
      class="bpk-text bpk-text--heading-4"
    >
      £1,830
    </span>
    <span
      class="bpk-text bpk-text--xs"
    >
      / night
    </span>
  </div>
</DocumentFragment>
`;

exports[`Layout small should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--small"
  >
    <span
      class="bpk-text bpk-text--xs bpk-price__subtitle"
    >
      £200
    </span>
    <span
      class="bpk-text bpk-text--heading-4"
    >
      £1,830
    </span>
  </div>
</DocumentFragment>
`;
